--- a/src/Weather.css
+++ b/src/Weather.css
@@ -21,9 +21,8 @@
 
 .Weather canvas {
   margin-right: 10px;
-  margin-top: 10px;
-  height: 64px;
-  width: 64px;
+
+  margin-top: 20px;
 }
 
 .Weather .temperature {
@@ -31,6 +30,7 @@
   font-weight: 400;
   color: rgb(33, 33, 33);
   line-height: 70px;
+  margin-left: 5px;
 }
 .Weather .unit {
   color: rgb(33, 33, 33);
@@ -44,6 +44,7 @@
 .Weather .clearfix {
   margin-top: 20px;
 }
+
 .Weather ul {
   margin: 0;
   padding: 0;
@@ -55,4 +56,8 @@
   line-height: 19px;
   list-style: none;
   margin: 0;
+}
+
+.WeatherInfo .details {
+  margin: 50px;
 }
